node-affinity-1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-hello-deployment
  namespace:
  labels:
    app: nginx-hello
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-hello
  template:
    metadata:
      labels:
        app: nginx-hello
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: zone
                    operator: In
                    values:
                      - foo-no
                      - bbb-no
              weight: 60 #匹配相应nodeSelectorTerm相关联的权重,1-100
      containers:
        - name: nginx-hello
          image: nginx
          ports:
            - containerPort: 80
