statefulSet.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: test
  name: eureka
  labels:
    app: eureka
spec:
  serviceName: "eureka"
  replicas: 3
  selector:
    matchLabels:
      app: eureka
  template:
    metadata:
      labels:
        app: eureka
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: eureka
          image: 192.168.126.146:80/repo/eureka:v1.0.0
          ports:
            - containerPort: 8761
