taint.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-taint
  namespace:
  labels:
    app: nginx-taint
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-taint
  template:
    metadata:
      labels:
        app: nginx-taint
      containers:
        - name: nginx-taint
          image: nginx
          ports:
            - containerPort: 80
