headless.yml
kind: Service
apiVersion: v1
metadata:
  name: eureka
  namespace: test
spec:
  clusterIP: None
  ports:
    - name: http
      port: 8761
      protocol: TCP
      targetPort: 8761
  selector:
    app: eureka
