ingress.yml

# 部署 qcbm-ingress
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: qcbm-ingress
  namespace: test
spec:
  rules:
    - host: qcbm.com
      http:
        paths:
          - path: /
            backend:
              serviceName: eureka
              servicePort: 8761
