k8s-eureka.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: test
  name: eureka
  labels:
    app: eureka
spec:
  serviceName: "eureka"
  replicas: 3
  selector:
    matchLabels:
      app: eureka
  template:
    metadata:
      labels:
        app: eureka
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: eureka
          image: 192.168.126.146:80/repo/eureka:v1.0.0
          ports:
            - containerPort: 8761
---
kind: Service
apiVersion: v1
metadata:
  name: eureka
  namespace: test
spec:
  clusterIP: None
  ports:
    - name: http
      port: 8761
      protocol: TCP
      targetPort: 8761
  selector:
    app: eureka
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: qcbm-ingress
  namespace: test
spec:
  rules:
    - host: qcbm.com
      http:
        paths:
          - path: /
            backend:
              serviceName: eureka
              servicePort: 8761
